[package]
name = "bevy_tiled_display"
version = "0.16.0"
edition = "2024"

description = "Bevy plugin for working with large multi-machine tiled displays"
authors = ["Christoph Schulz <schulzcbs@gmail.com>"]

[lib]
crate-type = ["rlib"]

[dependencies]
bevy = "0.16"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }
hostname = "0.4"
mpi = { version = "0.8", optional = true }

[features]
default = []
mpi = ["dep:mpi"]
